  - Moved mailer configuration to config/environment.rb.

1.2.0   09/12/2013

  - Upgraded to Rails 3.2.16.
  - Updated dependencies with minor changes.

1.1.0   17/11/2013
  - Removed lemmata.sort_key, lemmata.full_gloss and renamed lemmata.short_gloss to lemmata.gloss.
  - gzip all export files by default.

1.0.1   31/05/2013

  - Updated dependencies.
  - Put secret token in a separate file.
  - Moved some database validation code to a worker.
  - Relaxed validation of dependency annotation so that only annotated sentences are validated.
  - Added Source#merge_with_source!
  - Added initial version of TextImporter.
  - Updated download page to check for existence of export files and link to all available schemas.
  - Numerous bug fixes

1.0.0   23/04/2013

  - Upgraded to Rails 3.2.13.
  - Updated dependencies.
  - PROIEL XML format updated to version 1.0.
  - PROIEL XML export updated.
  - JSON export added.
  - Plain text export added.
  - New attributes added to token search.
  - CSV and plain text export of search results added.
  - Removed obsolete editorial columns from lemmata table.
  - Removed sources.code.
  - Removed source_divisions.abbreviated_title.
  - Table relations replaced by relation_tag.

0.9.3   09/09/2012

  - Added LaTeX export for sentence objects.
  - Switched to thin as preferred webserver.

0.9.2   06/09/2012

  - Updated dependencies.
  - Replaced MaltXML exporter with CoNLL exporter.

0.9.1   28/08/2012

  - Upgraded to Rails 3.2.8.