@@ -1,3 +1,4 @@
+  - Made handling of empty citation_parts more robust.
   - Moved mailer configuration to config/environment.rb.
 
 1.2.0   09/12/2013
